<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
       <string name="two">2</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="result">Print something</string>
    <string name="equalTo">=</string>
    <string name="buttonFour">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="ac">AC</string>
    <string name="backspace">X</string>
</resources>
